2004-10-21  Derek Price  <derek@ximbiot.com>

	* Makefile.am (libcvs_a_SOURCES): Add yesno.h.
	* rpmatch.c, yesno.h: New files from GNULIB.
	* yesno.c: Update from GNULIB.

2004-10-23  Conrad T. Pino  <Conrad@Pino.com>

	* libcvs.dsp: Add "../windows-NT/stdint.h" to project.
	* libcvs.dep: Regenerate for "libcvs.dsp" change.

2004-10-22  Mark D. Baushke  <mdb@cvshome.org>

	* Makefile.am (libcvs_a_OBJECTS): Fix typo for $(ALLOCA_H) and
	($STDBOOL_H). Also update rules for stdint GNULIB module.	
	* Makefile.in: Regenerated.

2004-10-22  Conrad T. Pino  <Conrad@Pino.com>

	* libcvs.dsp: Remove "argmatch.c" from project.

2004-10-22  Mark D. Baushke  <mdb@cvshome.org>

	* Makefile.am (libcvs_a_SOURCES): Add stdint GNULIB module.
	Fix typos in alloca and stdbool sections.
	* stdint_.h: New file from GNULIB.
	* getpagesize.h: Update from GNULIB.
	* mktime.c: Update from GNULIB.

2004-10-22  Derek Price  <derek@ximbiot.com>

	* Makefile.am (libcvs_a_SOURCES): Move md5 to its own section.
	* md5.c, md5.h: Update from GNULIB.

2004-10-21  Derek Price  <derek@ximbiot.com>

	* Makefile.am, rpmatch.c, yesno.h, yesno.c: Back out recent changes.

2004-10-21  Derek Price  <derek@ximbiot.com>

	* error.c, error.h: Update from GNULIB.

2004-10-21  Mark Baushke  <mdb@cvshome.org>

	* libcvs.dep, libcvs.mak: Remove argmatch references.

2004-10-21  Derek Price  <derek@ximbiot.com>

	* Makefile.am (libcvs_a_SOURCES): Move yesno to its own section.
	* rpmatch.c, yesno.h: New files from GNULIB.
	* yesno.c: Update from GNULIB.

2004-10-21  Derek Price  <derek@ximbiot.com>

	* Makefile.am (libcvs_a_SOURCES): Move getpagesize to its own section.
	* getpagesize.h: Update from GNULIB.

2004-10-21  Mark Baushke  <mdb@cvshome.org>

	* Makefile.in: Regenerated.

2004-10-21  Derek Price  <derek@ximbiot.com>

	* Makefile.am (libcvs_a_SOURCES): Remove argmatch.c.
	* argmatch.c: Remove this unused file.

2004-10-21  Derek Price  <derek@ximbiot.com>
